feat: percistence layer

--- a/src/5.Presentation/Presentation/Presentation.csproj
+++ b/src/5.Presentation/Presentation/Presentation.csproj
@@ -7,12 +7,12 @@
     <UserSecretsId>aspnet-Presentation-9cb719e4-30ac-4ea9-b944-438a7ba88417</UserSecretsId>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\3.Persistence\Persistence\Persistence.csproj" />
+	</ItemGroup>
 
 </Project>
