--- a/src/5.Presentation/Presentation/appsettings.Development.json
+++ b/src/5.Presentation/Presentation/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=localhost;Database=royalmal-map-db;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=False;Persist Security Info=False;User ID=Developer;Password=Development;Trust Server Certificate=True",,
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=royalmall-db;Integrated Security=False;Persist Security Info=False;User ID=Developer;Password=Development;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
