--- a/src/5.Presentation/Presentation/appsettings.json
+++ b/src/5.Presentation/Presentation/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Presentation-9cb719e4-30ac-4ea9-b944-438a7ba88417;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=localhost;Database=royalmal-map-db;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=False;Persist Security Info=False;User ID=Developer;Password=Development;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=royalmall-db;Integrated Security=False;Persist Security Info=False;User ID=Developer;Password=Development;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
